# thermostazvenoh

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  flake.nix  module.nix  package.nix  rust-toolchain.toml  vm.nix
dashboards/: chauffage.json
kal-daemon/: Cargo.toml
kal-daemon/src/: daemon.rs  lib.rs  main.rs  mode.rs
kal-embed/: Cargo.toml
kal-embed/src/: error.rs  kalval.rs  network.rs  relay.rs  shtc3.rs  togglable.rs
src/: aht20.rs  error.rs  kalval.rs  led.rs  lib.rs  network.rs  relay.rs  shtc3.rs  togglable.rs
