[package]
edition      = "2024"
name         = "kal-embed"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "kal"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }

embassy-net = { version = "0.7.1", features = ["defmt", "dhcpv4", "dhcpv4-hostname", "medium-ethernet", "tcp", "udp"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32c3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c3"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = { version = "2.1.1", features = ["nightly"] }
zenoh-nostd = { git = "https://github.com/ZettaScaleLabs/zenoh-nostd", features = ["defmt"] }
zenoh-embassy = { git = "https://github.com/ZettaScaleLabs/zenoh-nostd" }
spin = { version = "0.10.0", features = ["portable-atomic"] }
getrandom = { version = "0.2.16", features = ["custom"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
heapless = { version = "0.9.2", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
thiserror = { version = "2.0.17", default-features = false }
aht20-async = { version = "1.0.0", optional = true }
shtcx = { version = "1.0.0", optional = true }

[features]
default = ["shtc3"]
aht20 = ["dep:aht20-async"]
shtc3 = ["dep:shtcx"]


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
